# ChangeLog for app-shells/zsh-completion
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-shells/zsh-completion/ChangeLog,v 1.21 2007/02/27 17:03:47 grobian Exp $

  27 Feb 2007; Fabian Groffen <grobian@gentoo.org>
  zsh-completion-20040730.ebuild, zsh-completion-20050120.ebuild,
  zsh-completion-20050503.ebuild, zsh-completion-20060618.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  27 Feb 2007; Guy Martin <gmsoft@gentoo.org>
  zsh-completion-20060618.ebuild:
  Stable on hppa

  26 Feb 2007; Lars Weiler <pylon@gentoo.org>
  zsh-completion-20060618.ebuild:
  Stable on ppc; bug #168320.

  26 Feb 2007; Christian Faulhammer <opfer@gentoo.org>
  zsh-completion-20060618.ebuild:
  stable x86; bug 168320

  24 Jan 2007; Marius Mauch <genone@gentoo.org>
  zsh-completion-20040730.ebuild, zsh-completion-20050120.ebuild,
  zsh-completion-20050503.ebuild, zsh-completion-20060618.ebuild:
  Replacing einfo with elog

  17 Nov 2006; Diego Pettenò <flameeyes@gentoo.org>
  zsh-completion-20060618.ebuild:
  Add ~sparc-fbsd keyword.

  20 Sep 2006; Diego Pettenò <flameeyes@gentoo.org>
  zsh-completion-20060618.ebuild:
  Add ~x86-fbsd keyword.

  22 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  zsh-completion-20050120.ebuild:
  Stable on sparc

*zsh-completion-20060618 (17 Jun 2006)

  17 Jun 2006; Mamoru KOMACHI <usata@gentoo.org>
  +zsh-completion-20060618.ebuild:
  Added eclean completion and most of the programs of portage_utils.
  Thanks to baptux <baptiste.daroussin@gmail.com>. This closes bug #133855.

*zsh-completion-20050503 (03 May 2005)

  03 May 2005; Mamoru KOMACHI <usata@gentoo.org>
  +zsh-completion-20050503.ebuild:
  Added euse completion. Thanks to baptux <baptiste.daroussin@gmail.com>;
  bug #91196.

  21 Apr 2005; Simon Stelling <blubb@gentoo.org>
  zsh-completion-20050120.ebuild:
  stable on amd64

  06 Apr 2005; Mamoru KOMACHI <usata@gentoo.org>