@@ -1,6 +1,9 @@
 # ChangeLog for app-shells/zsh
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-shells/zsh/ChangeLog,v 1.106 2007/02/27 16:59:15 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-shells/zsh/ChangeLog,v 1.107 2007/02/28 15:10:59 blubb Exp $
+
+  28 Feb 2007; Simon Stelling <blubb@gentoo.org> zsh-4.3.2-r2.ebuild:
+  stable on amd64; bug 168320
 
   27 Feb 2007; Fabian Groffen <grobian@gentoo.org> zsh-4.2.5.ebuild,
   zsh-4.2.6-r1.ebuild, zsh-4.3.2-r1.ebuild, zsh-4.3.2-r2.ebuild:
