@@ -1,6 +1,10 @@
 # ChangeLog for app-shells/zsh-completion
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-shells/zsh-completion/ChangeLog,v 1.21 2007/02/27 17:03:47 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-shells/zsh-completion/ChangeLog,v 1.22 2007/02/28 15:11:17 blubb Exp $
+
+  28 Feb 2007; Simon Stelling <blubb@gentoo.org>
+  zsh-completion-20060618.ebuild:
+  stable on amd64; bug 168320
 
   27 Feb 2007; Fabian Groffen <grobian@gentoo.org>
   zsh-completion-20040730.ebuild, zsh-completion-20050120.ebuild,
